--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   get: ^4.6.5
   cloud_firestore: ^4.1.0
   uuid: ^3.0.7
+  json_serializable: ^6.5.4
+  json_annotation: ^4.7.0
 
 
 dev_dependencies:
